# prompt-stacker

./: .gitignore  .pre-commit-config.yaml  BUILD_GUIDE.md  LICENSE  MULTIPLE_INSTANCES.md  README.md  automator.py  build.bat  build.py  code_report_card.py  coord_selector.py  create_cert.bat  cursor.py  dpi.py  event_flow_analysis.md  lint.py  prompt_config.json  pyproject.toml  record.py  requirements-dev.txt  requirements.txt  run_app.bat  settings_store.py  setup.py  start_multiple.bat  test_automation_emulator.py  test_prompts.py  test_ui.bat  ui_coord_selector.py  ui_countdown.py  ui_session.py  win_focus.py
.github/workflows/: ci.yml
build_tools/: __init__.py  build.ps1  build.py  build_config.py  build_manager.py  pyinstaller_builder.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DISTRIBUTION_GUIDE.md  GITHUB_SETUP.md  REFACTORING_SUMMARY.md  TESTING.md
prompt_lists/: prompt_list.py
scripts/: setup_repo.ps1  setup_repo.sh
src/: __init__.py  automation_controller.py  automation_integration.py  automator.py  config.py  config_service.py  coordinate_service.py  countdown_service.py  debug_hanging.py  dpi.py  error_handler.py  event_service.py  file_service.py  inline_prompt_editor_service.py  lint.py  memory_pool.py  parser_service.py  path_service.py  performance.py  performance_profiler.py  settings_store.py  ui_session_refactored.py  win_focus.py  window_service.py  writer_service.py
src/ui/: __init__.py  prompt_io.py  session_app.py  session_controller.py  state_manager.py
src/ui_builders/: __init__.py  base_builder.py  configuration_builder.py  content_builder.py  control_builder.py  countdown_builder.py  prompt_list_builder.py
tests/: __init__.py  conftest.py  run_paste_next_tests.py  run_tests.py  test_automator.py  test_coordinate_service.py  test_countdown_service.py  test_coverage_report.py  test_file_service.py  test_flexible_parser.py  test_multiple_file_handling.py  test_paste_and_next_operations.py  test_thread_safety.py  test_ui_session.py  test_utils.py
user_prompts/: abbra.py
